@@ -1,4 +1,7 @@
 2003-03-19  Alif Wahid	<awah005@users.sourceforge.net>
+	* examples/SimpleScene.py: Updated to use the gtk.gtkgl.apputils module.
+
+2003-03-19  Alif Wahid	<awah005@users.sourceforge.net>
 	* examples/MoveLight.py: Updated to use the gtk.gtkgl.apputils module.
 
 2003-03-19  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
